# CPP

./: .gitignore  README.md
AtomGame/: CMakeLists.txt  Run  log4cpp.properties  main.cpp
AtomGame/blocks/: bouncy.xml  upDown.xml
AtomGame/blocks/programs/: bounce.bit  bounce.txt  bounce_old.bit  compiler  leftRight.bit  leftRight.txt  patrol.bit  patrol.txt  upDown.bit  upDown.txt
AtomGame/controller/: CMakeLists.txt  Controller.cpp  Controller.h
AtomGame/maps/: init.xml
AtomGame/mechanics/: CMakeLists.txt  Mechanics.cpp  Mechanics.h  main.cpp
AtomGame/model/: CMakeLists.txt  Model.cpp  Model.h
AtomGame/objects/: Actor.cpp  Actor.h  Bot.cpp  Bot.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Coin.cpp  Coin.h  CustomObject.cpp  CustomObject.h  GameField.cpp  GameField.h  GameObject.h  PhysicalObject.cpp  PhysicalObject.h  Player.cpp  Player.h  ProgrammableObject.cpp  ProgrammableObject.h  Teleporter.cpp  Teleporter.h  TransMapTeleporter.cpp  TransMapTeleporter.h  Weapon.cpp  Weapon.h
AtomGame/objects/VCPU/: CMakeLists.txt
AtomGame/objects/VCPU/Interpreter/: CMakeLists.txt  VCPU.cpp  VCPU.h
AtomGame/objects/VCPU/utils/: CMakeLists.txt
AtomGame/plugins/: RToRestart.cpp  RToRestart.h  Rain.cpp  Rain.h
AtomGame/plugins/plugin/: CMakeLists.txt  Plugin.cpp  Plugin.h
AtomGame/programs/: bounce.txt
AtomGame/tests/: CMakeLists.txt  test.cpp
AtomGame/userPlugins/: libRToRestart.so.plugin  libRain.so.plugin
AtomGame/view/: Animation.cpp  Animation.h  AnimationFactory.cpp  AnimationFactory.h  CMakeLists.txt  HealthPanel.cpp  HealthPanel.h  ScorePanel.cpp  ScorePanel.h  Sounds.cpp  Sounds.h  SpriteFactory.cpp  SpriteFactory.h  View.cpp  View.h
AtomGame/view/res/: CMakeLists.txt  background1.xml  background2.xml  bullet.xml  coin.xml  gameover.xml  gameoverres.xml  heart.xml  lightning.xml  mapch.xcf  mapch.xml  number_0.xml  number_1.xml  number_2.xml  number_3.xml  number_4.xml  number_5.xml  number_6.xml  number_7.xml  number_8.xml  number_9.xml  platform.xml  player.xml  teleport.xml  thorn.xml  zombie.xml
AtomGame/visualization/: CMakeLists.txt  Visualizer.cpp  Visualizer.h
HW1/: HW1.sln
HW1/Debug/: HW1.ilk
HW1/HW1/: HW1.vcxproj  HW1.vcxproj.filters  Main.cpp  Stack.h  StackImpl.h
HW1/HW1/Debug/: vc140.idb
HW1/HW1/Debug/HW1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HW1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HW1_Test/: HW1_Test.sln
HW1_Test/Debug/: HW1_Test.exp  HW1_Test.ilk
HW1_Test/HW1_Test/: HW1_Test.vcxproj  stdafx.cpp  unittest1.cpp
HW1_Test/HW1_Test/Debug/: vc140.idb
HW1_Test/HW1_Test/Debug/HW1_Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HW1_Test.lastbuildstate  HW1_Test.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
